<resources>
    <string name="app_name">WeatherForMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">History</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="date">Update Days</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="humidity">Humidity</string>
    <string name="status">Status</string>
    <string name="temp">Temp</string>
    <string name="nations">Nations :</string>
    <string name="city">City Name :</string>
    <string name="today">To Days</string>
    <string name="tempmax"> max</string>
    <string name="tempmin"> min</string>
    <string name="day">Date</string>
    <string name="max">max</string>
    <string name="min">min</string>
    <string name="details">See details</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="days">Day</string>
    <string name="night">Night</string>
    <string name="population">Population:</string>
    <string name="timezone">TimeZone :</string>
    <string name="pressure">Pressure:</string>
    <string name="navigation_dra_open">Open drawer</string>
    <string name="navigation_dra_close">Close drawer</string>
    <string name="main">main</string>
    <string name="speed">Speed</string>
    <string name="clouds">Clouds</string>
    <string name="fiveday">Next seven days weather</string>
    <string name="welcome">Welcome to Weather</string>
    <string name="address">Address</string>
    <string name="sunrise">Sunrise:  </string>
    <string name="sunset">Sunset: </string>
    <string name="mess">Please enter city name</string>
    <string name="mess1">Save the address successfully</string>
    <string name="mess2">Something went wrong</string>
    <string name="mess3">There are no contents in this list</string>
    <string name="messInternet">You are connected to Internet</string>
    <string name="messnotInternet">You are not connected to Internet,"\n" Connect to the Internet to use the application</string>
</resources>
