<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorstatus"
            android:layout_weight="1"
            android:textSize="12sp"
            android:gravity="left"
            android:text="@string/day"
            android:id="@+id/tvdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"  />
        <ImageView
            android:layout_weight="1"
            android:id="@+id/imicon"
            android:gravity="left"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:gravity="left"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorstatus"
                android:gravity="left"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/min"
                android:id="@+id/tvmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/colorsred"
                android:gravity="left"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/max"
                android:textStyle="bold"
                android:id="@+id/tvmax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:textColor="@color/colorstatus"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_weight="1"
            android:textSize="12sp"
            android:id="@+id/tvstatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"  />

    </LinearLayout>
</LinearLayout>